--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -4,7 +4,7 @@
     <script type="text/javascript">
       google.charts.load("current", {packages:["corechart"]});
       google.charts.setOnLoadCallback(drawChart);
-      function drawChart() {
+      function monhistogramme() {
         var data = google.visualization.arrayToDataTable([
           ['Dinosaur', 'Length'],
           ['Acrocanthosaurus (top-spined lizard)', 12.2],
