--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -37,7 +37,7 @@
           ['Velociraptor (swift robber)', 1.8]]);
 
         var options = {
-          title: 'Lengths of dinosaurs, in meters',
+          title: 'Paris',
           legend: { position: 'none' },
         };
 
