--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -21,13 +21,13 @@
     });
     // Configurer les options du graphique en ligne
     var options = {
-      title: 'Évolution des températures de Paris pour les 16 prochains jours',
-      curveType: 'function',
-      legend: { position: 'bottom' }
-    };
-    var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-    chart.draw(dataTable, options);
-  }
+          title: 'Tawarano',
+          legend: { position: 'none' },
+        };
+
+        var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
   // Récupération de données depuis notre API /paris/
   fetch('/tawarano/')
     .then(response => response.json())
